--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^7.0.1",
     "recharts": "^2.13.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
