--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,14 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "types": ["vite/client"],
+    /*
+     * Include type definitions for both Vite and Node.
+     * The additional "node" entry ensures that the TypeScript compiler
+     * recognizes the NodeJS namespace (e.g. NodeJS.Timeout) used by
+     * utility functions in the codebase. Without this, builds will fail
+     * with errors such as "Cannot find namespace 'NodeJS'".
+     */
+    "types": ["vite/client", "node"],
     "useDefineForClassFields": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
@@ -13,6 +20,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strict": true,
+    /*
+     * Disable unused variables and parameters errors during compilation.
+     * This prevents Netlify builds from failing due to unused imports or
+     * temporarily unused variables (such as icons imported for future use).
+     */
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
